--- a/stylesheet.less
+++ b/stylesheet.less
@@ -32,25 +32,6 @@
 @import 'https://fonts.googleapis.com/css?family=Alegreya:400,400i,700,700i&subset=latin-ext';
 
 
-.row {
-    background-color: gainsboro;
-    .flex-display;
-    .justify-content(space-between);
-
-
-    &:nth-child(2) {
-        background-color: #eef1ff;
-    }
-
-
-    .column {
-        .align-self(center);
-        .flex(1 0 50%);
-        text-align: center;
-    }
-}
-
-
 
 // -----------------------------
 // Template Styles
